--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,23 @@
+@import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
+
 * {
-  font-family: sans-serif;
+  font-family: "Courier Prime";
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  background-color: #000;
+  color: #fff;
+}
+
+h1,
+p {
+  margin: 0;
 }
