--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap");
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   font-family: "Courier Prime";
   box-sizing: border-box;
