--- a/src/app.css
+++ b/src/app.css
@@ -6,7 +6,6 @@
 
 * {
   font-family: "Courier Prime";
-  box-sizing: border-box;
 }
 
 html,
@@ -14,6 +13,12 @@ body {
   margin: 0;
   width: 100%;
   height: 100%;
+}
+
+#svelte {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 body {
